Fix: wrapped product-details  with Suspense to support useSearchParams

--- a/src/components/HeroSection.module.css
+++ b/src/components/HeroSection.module.css
@@ -5,7 +5,8 @@
   background-size: cover;
   height: 400px;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
+
   justify-content: start;
   padding: 0 5%;
   color: #ffffff;
